<resources>
    <string name="app_name">Onyx</string>
    <string name="no_internet">I can\'t connect to the internet right now.\nMaybe come back later?</string>
    <string name="no_internet_button">Okay, I\'ll come back later.</string>
    <string name="slide_1_title">Hello, human!</string>
    <string name="slide_1_description">I\'m Onyx.\nYour personal, digital assistant.</string>
    <string name="slide_2_title">I\'m artificially intelligent.</string>
    <string name="slide_2_description">This means that I get better every time you use me.</string>
    <string name="slide_3_title">I\'m still under development.</string>
    <string name="slide_3_description">So it\'s very likely for me to make mistakes.\nDon\'t judge me!</string>
    <string name="default_greeting">Hello there!</string>
    <string name="type">Type here...</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="say_something">Say something...</string>
    <string name="error_error_log">\n\n\nNothing here. Looks like nothing ever went wrong.</string>
    <string name="title_activity_error_log">Error Log</string>
    <string name="text_input_hint">Enter text here</string>
    <string name="text_input_dialog_done_button_text">Done</string>
    <string name="text_input_dialog_cancel_button_text">Cancel</string>
    <string name="text_input_dialog_update_button_text">Update</string>
    <string name="text_input_spinner_prompt">Choose item to correct</string>
    <string name="text_line_break">------------------------------------------------------------------------</string>

    <string name="api_ai_client_access_token">fd0c404d8d874f3294d1eb339f3cddb0</string>

    <string name="shodan_api_key">2X7ymEt9qcTxGBXNhiix52mM1yRNN2kL</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
